fix(@dpc-sdp/ripple-ui-core): ensure inset card image doesn't get too small

--- a/packages/ripple-ui-core/src/components/card/RplCard.css
+++ b/packages/ripple-ui-core/src/components/card/RplCard.css
@@ -174,9 +174,9 @@
 
       .rpl-card__upper {
         flex-shrink: 0;
-        flex-basis: calc(
+        flex-basis: min(calc(
           32rem + (var(--rpl-sp-8) + var(--rpl-sp-6))
-        ); /* basis = 320px + l/r margin */
+        ), calc(50% + var(--rpl-sp-3))); /* basis = 320px|50% + margins */
       }
 
       .rpl-card__media--inset {
